Refactored DocumentItem to DocumentRecord